feature: working recorder mode

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="/goban.css" />
   </head>
 
-  <body id="goban"></body>
+  <body>
+    <div id="goban"></div>
+  </body>
 
   <script type="text/javascript">
     var app = Elm.Main.init({
