feature: switch to elm snowpack starter

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>
-      Goban
-    </title>
+    <title>Goban</title>
 
     <link rel="stylesheet" href="/style/goban.css" />
 
@@ -27,7 +25,9 @@
 
   <body>
     <div id="goban"></div>
-    <script type="text/javascript">window.cableUrl = "%SNOWPACK_PUBLIC_CABLE_URL%"</script>
-    <script type="module" src="/js/app.js"></script>
+    <script type="text/javascript">
+      window.cableUrl = '%SNOWPACK_PUBLIC_CABLE_URL%';
+    </script>
+    <script type="module" src="/app.js"></script>
   </body>
 </html>
