refactor: app styling

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="background: rgb(164 143 122)">
   <head>
     <meta charset="UTF-8" />
     <title>Goban</title>
