fix: board size handling use vite assets

--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
     <!-- Enable the App Icon -->
-    <link rel="icon" type="image/png" sizes="196x196" href="/img/icon.png" />
-    <link rel="apple-touch-icon" href="/img/icon.png" />
-    <link rel="apple-touch-startup-image" href="/img/icon.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="icon" type="image/png" sizes="196x196" href="/assets/img/icon.png" />
+    <link rel="apple-touch-icon" href="/assets/img/icon.png" />
+    <link rel="apple-touch-startup-image" href="/assets/img/icon.png" />
+    <link rel="manifest" href="/assets/site.webmanifest" />
     <meta name="viewport" content="width=device-width" />
     <meta
       name="viewport"
@@ -22,9 +22,7 @@
   </head>
 
   <body>
-    <script type="text/javascript">
-      window.cableUrl = '%SNOWPACK_PUBLIC_CABLE_URL%';
-    </script>
-    <script type="module" src="/app.js"></script>
+    <script type="text/javascript"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
